--- a/index.html
+++ b/index.html
@@ -3,9 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- FONTAWESOME CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- NORMALIZE CSS -->
+    <link rel="stylesheet" href="./css/normalize.css">
+    <!-- CSS PREFIX CSS -->
+    <link rel="stylesheet" href="./css/prefix.css">
+    <!-- CSS MINIFY CSS -->
+    <link rel="stylesheet" href="./css/style.min.css">
+    <!-- CSS LOCAL LINK -->
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
+    <title>COFFEE-ROASTER</title>
 </head>
 <body>
-    
+    <!-- HEADER START -->
+    <header class="header" id="header">
+        <div class="container header-container">
+            <!-- HEADER LOGO START -->
+            <div class="header-logo">
+                <a href="#">
+                    <img src="./images/header-logo.svg" alt="header-logo">
+                </a>
+            </div>
+            <!-- HEADER LOGO END -->
+
+            <!-- BAR START -->
+            <button class="hamburger-menu">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+            <!-- BAR END -->
+
+
+            <!-- NAV START -->
+            <nav class="nav">
+                <ol class="nav-list">
+                    <li class="nav-item">
+                        <a class="nav-link"  href="#">Home</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link"  href="#">About us</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link"  href="#">Create your plan</a>
+                    </li>
+
+                    <li>
+                        <i class="fa-solid fa-xmark close"></i>
+                    </li>
+                </ol>
+            </nav>
+            <!-- NAV END -->
+        </div>
+    </header>
+    <!-- HEADER END -->
+
+    <script>
+        let elBtn = document.querySelector(".hamburger-menu");
+        let elCloseBtn = document.querySelector(".close");
+        let elNav = document.querySelector(".nav");
+
+        elBtn.addEventListener("click", () => {
+            elNav.style.display = "block"
+        })
+
+        elCloseBtn.addEventListener("click", () => {
+            elNav.style.display = "none"
+
+        })
+    </script>
 </body>
 </html>
